--- a/autotask_web_app/templates/index.html
+++ b/autotask_web_app/templates/index.html
@@ -11,15 +11,13 @@
         {% if at == None %}
         <div class="note note-danger">
             <h4 class="block">Autotask connection not established</h4>
-            <p><strong>Reason: </strong>
-              {% for message in messages %}
+              <p>{% for message in messages %}
                 {{ message }}
               {% endfor %}</p>
               <hr>
             <p><a href="{% url 'profile' user.id %}">Please login to Autotask using your credentials, this will allow you to start searching for accounts.</p></a>
         </div>
         {% endif %}
-        {% if at != None %}
           <div class="portlet light portlet-fit ">
             <div class="portlet-title">
                 <div class="caption">
@@ -28,17 +26,41 @@
                 </div>
             </div>
             <div class="portlet-body">
-              <p>Take back control of Autotask and ensure your engineers are entering the right information.</p>
-              <p><strong>Instructions:</strong></p>
-                <p>1. Enter your Autotask login credentials on the profile page <br>
-                2. Create Picklist modules by clicking on "Create Picklist Module".<br>
-                3. Configure Validation Groups!<br>
-                4. Configure Autotask LiveLinks<br>
-                5. Validate your input!</p>
+              <div class="row">
+                <div class="col-md-12">
+                  <div class="portlet light portlet-fit bordered">
+                    <div class="portlet-title">
+                      <div class="caption">
+                          <span class="caption-subject font-blue-madison bold uppercase">Get Started</span>
+                      </div>
+                    </div>
+                    <div class="portlet-body">
+                      <div class="mt-element-step">
+                        <div class="row step-line">
+                          <div class="col-md-4 mt-step-col first {% if user.profile.company.name != 'No Company' %} done {% else %} active {%endif%}">
+                            <div class="mt-step-number bg-white font-grey">1</div>
+                            <div class="mt-step-title uppercase font-grey-cascade">Create/Join A Company</div>
+                            <div class="mt-step-content font-grey-cascade">You must be associated to a company to get started</div>
+                          </div>
+                          <div class="col-md-4 mt-step-col {% if user.profile.autotask_username %} done {% else %} active {% endif %}">
+                            <div class="mt-step-number bg-white font-grey">2</div>
+                            <div class="mt-step-title uppercase font-grey-cascade">Enter Autotask Credentials</div>
+                            <div class="mt-step-content font-grey-cascade">Login to Autotask</div>
+                          </div>
+                          <div class="col-md-4 mt-step-col last ">
+                            <div class="mt-step-number bg-white font-grey">3</div>
+                            <div class="mt-step-title uppercase font-grey-cascade">Create Picklist </div>
+                            <div class="mt-step-content font-grey-cascade">A picklist module provides all the variable data from your account</div>
+                          </div>
+                        </div>
+                      </div>
+                  </div>
+                </div>
+              </div>
+            </div>
             </div>
           </div>
         </div>
-        {% endif %}
       </div>
     </div>
     <!-- END CONTENT BODY -->
