--- a/autotask_web_app/templates/home.html
+++ b/autotask_web_app/templates/home.html
@@ -629,26 +629,9 @@
 
     <a href="#" id="totop">TOP</a>
 
-    <!-- JS FILES // These should be loaded in every page -->
-
-
-
-    <!-- Custom Kallyas JS codes -->
-
-    <!-- Custom user JS codes -->
-
-
-    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID.
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-      ga('create', 'UA-XXXXX-X', 'auto');
-      ga('send', 'pageview');
-    </script>
-    -->
+    <script src="//static.getclicky.com/js" type="text/javascript"></script>
+    <script type="text/javascript">try{ clicky.init(100978019); }catch(e){}</script>
+    <noscript><p><img alt="Clicky" width="1" height="1" src="//in.getclicky.com/100978019ns.gif" /></p></noscript>
 
 
 <div class="chaser"><div class="container"><div id="chaserMenuRow" class="row"></div></div></div></body></html>
